📱 Fix copy toast responsive behaviour on mobile

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -988,7 +988,10 @@ a.wip:hover
   +motion($time-medium, $weight-small, $speed-accelerated, transform)
 
 .slide-enter, .slide-leave-to
-  transform: translateX(calc(100% + 48px))
+  transform: translateX(50%) translateY(calc(-100% - 48px))
+
+  +adapt($bkp-tablet)
+    transform: translateX(calc(100% + 48px))
 
 .page-enter-active, .page-leave-active
   +motion($time-standard, $weight-xlarge, $speed-standard, opacity)
